styles/main.css
:root {
  --accent: /* #54d02b */ /* #58a6ff */ #69afff;
  --accent-darker: /* #39a615 */ #4f95e6;
  --text: /* #e0e1f0 */ #c9d1d9;
  --bg: /* #14121a */ #0d1117;
  --text-sub: #b7b8c5;
  --text-alt: #7a7a85;
  --bg-alt: /* #201e26 */ #161b22;
  --font: Roboto Mono, monospace;
  --weight-normal: 400;
  --weight-medium: 500;
  --weight-bold: 700;
  --nav-height: 6.4rem;
  --blog-container-width: 80rem;
}
/* ******************** */
/*  General */
/* ******************** */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  scrollbar-width: thin;
  scrollbar-color: var(--accent) var(--bg);
}

html {
  font-size: 62.5%;
  overflow: hidden;
}

body {
  font-size: 1.6rem;
  font-family: var(--font);
  color: var(--text-sub);
  background: var(--bg);
  height: 100vh;
  width: 100%;
  overflow-x: hidden;
  tab-size: 4;
  font-weight: var(--weight-normal);
}

h2,
h3 {
  font-weight: var(--weight-medium);
}

p {
  color: var(--text-sub);
}

a,
p {
  font-size: 1.4rem;
}

footer {
  margin-top: 9.6rem;
  text-align: center;
  height: 6.4rem;
}

.btn-home {
  text-decoration: none;
  color: var(--accent);
  font-size: 1.8rem;
  border: 1px solid var(--accent);
  padding: 1rem;
  border-radius: 1rem;
}

.container {
  max-width: 120rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin: auto;
  padding: 0 3.2rem;
  gap: 2rem;

  /* width: auto; */
}

.heading-primary {
  font-size: 6.4rem;
  text-align: center;
  overflow-x: hidden;
  text-overflow: ellipsis;
  color: var(--accent);

  margin-top: 3.4rem;
}

.heading-secondary {
  color: var(--accent);
  /* color: var(--text); */
  margin: 3.4rem 0;
  font-size: 2.4rem;
  font-weight: var(--weight-bold);
  padding: 1rem;
}

.heading-sub {
  font-size: 2.4rem;
  color: var(--text-sub);
  text-align: center;
  margin-bottom: 6.4rem;
}

.btn {
  text-decoration: none;
  color: var(--accent-darker);
}

.disable-display {
  display: none !important;
}

#canvas {
  height: 100%;
  width: 100%;
  background: var(--clr-primary);

  display: block;
  /* position: fixed; */
  position: absolute;
  top: 0;
  left: 0;
  z-index: -999;
}

/* ******************** */
/*  Navigation */
/* ******************** */

.header {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  padding: 0 4.8rem;
  height: var(--nav-height);
  position: relative;
  /* background-color; */
}

.logo {
  text-decoration: none;
  cursor: pointer;
}

.logo__para {
  color: var(--text);
  font-weight: var(--weight-medium);
  font-size: 3.4rem;
}

.logo__span {
  color: var(--accent);
  font-weight: var(--weight-bold);
}

.nav__list {
  list-style: none;
  display: flex;
  align-items: center;
  gap: 4.8rem;
}

.nav__link {
  display: inline-block;
  text-decoration: none;
  color: var(--accent);
  position: relative;
  font-size: 1.6rem;
}

.nav__link::after {
  content: '';
  width: 0;
  height: 3px;
  background-color: var(--text);
  position: absolute;
  left: 0;
  bottom: -0.7rem;
}

.nav__link:hover::after,
.nav__link:active::after {
  width: 100%;
}

/* ******************** */
/*  Mobile-Nav */
/* ******************** */

.btn-mobile-nav {
  border: none;
  background: none;
  cursor: pointer;
  display: none;
}

.icon-mobile-nav {
  height: 4.8rem;
  width: 4.8rem;
  color: var(--accent);
}

.icon-mobile-nav[name='close-outline'] {
  display: none;
}

/* ******************** */
/*  HomePage */
/* ******************** */

hr {
  margin: 1.5rem 0;
  border: 0;
  border-bottom: 2px dashed var(--text-sub);
}

.home-page {
  display: flex;
  flex-direction: row;
  height: calc(100vh - var(--nav-height));
  width: 100vw;
  justify-content: center;
  align-items: center;
  padding: 14rem 4rem;
}

/* Left side */
.home-left {
  display: flex;
  flex-direction: column;
  width: 20rem;
  height: 40rem;
}

.home-left__heading-2 {
  font-size: 2.4rem;
  color: var(--text);
  margin-left: 1.4px;
}
.home-left__heading {
  color: var(--accent);
  font-size: 3.8rem;
  padding: 1.4rem 0;
  font-weight: var(--weight-bold);
}
.home-left__about-heading {
  margin: 1rem 0;
  color: var(--text);
  font-weight: var(--weight-medium);
}
.home-left__about-text {
}

/* center */

.home-center__img g {
  fill: var(--accent);
}

/* Right side */
.home-right {
  width: 20rem;
  height: 40rem;
  display: flex;
  flex-direction: column;
}

.home-right__heading {
  color: var(--text);
}
.home__blog-articles {
}

.home-right__list {
  list-style: none;
  padding: 1rem 0;
}

.home-right__link {
  text-decoration: underline;
  color: var(--accent);
}

.contact {
  display: flex;
  flex-direction: row;
  gap: 1.2rem;
}
.contact__icon {
  color: var(--accent);
  height: 25px;
  width: 25px;
}

.contact__heading {
  color: var(--text);
}

.contact__link {
  text-decoration: none;
  height: 100%;
  width: fit-content;
  cursor: pointer;
  display: inline-block;
  transition: transform 0.4s;
  color: var(--accent);
}

.contact__link:hover {
  transform: translateY(-5px);
}

/* ******************** */
/*  BLOG */
/* ******************** */

.blog-container {
  display: flex;
  flex-direction: column;
  max-width: var(--blog-container-width);
  margin: 9.6rem auto;
  border-radius: 2rem;
  padding: 3.4rem;
  row-gap: 2rem;
}

.blog-container__text {
  padding: 1rem;
}

.blog-container__sub-heading {
  color: var(--accent);
  padding: 1rem;
}

.blog-codeblock {
  background-color: var(--bg-alt);
  width: fit-content;
  padding: 1rem;
  border-radius: 2rem;
  margin: 1rem;
}

.blog-codeblock--2 {
  padding: 1.5rem;
  /* margin: 2rem; */
}

.blog-codeblock__span {
  color: var(--accent);
}

.blog-codeblock__span-2 {
  color: #b969ff;
}

.blog-codeblock__span-3 {
  color: var(--accent-darker);
}
.blog-codeblock__span-4 {
  color: #ff6e69;
}
.resources-container {
  display: flex;
  flex-direction: column;
  gap: 2rem;
}

.resources__heading {
  color: var(--text);
  margin-top: 3.4rem;
  margin-bottom: 3.4rem;
}

.blog__resources-subtitle {
  color: var(--text);
  margin-top: 3.4rem;
  margin-bottom: 3.4rem;
}

.resource__list {
  list-style: none;
}
.resources__link {
  /* text-decoration: none; */
  color: var(--accent-darker);
}

.resources__img {
  width: 100%;
  border-radius: 5px;
}

.resources-section {
  display: flex;
  flex-direction: column;
  max-width: var(--blog-container-width);
  margin: 9.6rem auto;
  background-color: var(--bg-alt);
  border-radius: 2rem;
  row-gap: 2rem;
  padding: 3.4rem;
}

/* BLOG PAGE */

.blog-container--grid {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: repeat(2, 1fr);
  margin: 6.4rem auto;
  max-width: 90rem;
}

.blog-article {
  /* display: grid; */
  /* grid-template-rows: auto 1fr 1fr; */
  /* grid-template-columns: repeat(3, 1fr); */

  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
  justify-content: space-between;
  width: 30rem;
  height: 30rem;

  /* gap: 2rem; */
  padding: 4.8rem 2rem;
}

.blog-article___heading {
  /* grid-column: 1 / 4; */

  color: var(--accent);
  font-size: 1.8rem;
}

.blog-article__text {
  grid-column: 1 / 4;
  padding-right: 1.4rem;
}

.btn-2 {
  grid-column: 1 / 4;
}

/* .testimonial-text {
  font-size: 1.8rem;
  line-height: 1.8;
  margin-bottom: 1.6rem;
} */

/* TABBED */

/* OPERATIONS */

.blog-container-2 {
  margin: 0 auto;
  max-width: 65rem;
  display: flex;
  flex-direction: column;
  place-items: center;
  /* text-align: justify; */
}

.blog-container__list-1 {
  list-style: disc;
}

li::marker {
  color: var(--accent);
}

.blog-container-3 {
  max-width: 65rem;
  padding-left: 4rem;
}

.blog-container__list-2 {
  list-style: decimal;
}

.btn-example {
  text-decoration: none;
  background: var(--bg-alt);
  color: var(--accent);
  padding: 1rem;
  width: 10rem;
  margin: auto;
  border-radius: 5px;
  border: 1px solid var(--accent);
}

.btn-invert {
  background: var(--accent);
  color: var(--bg-alt);
}

.heart-img {
  width: 50%;
  height: auto;
  margin: 0 auto;
}

.blog-container__list-2 {
  list-style: none;
}

.blog-container__list-2 li {
  margin-top: 3.4rem;
}

.resource-link {
  text-decoration: none;
  color: var(--text);
  border-bottom: 1px solid var(--accent-darker);
  cursor: pointer;
}

